# bmstu-refal-compiler

./: .gitignore  TODO.txt
Compiler-build/: FAB.ptree  FAB.ref  FAB2.ref  build.sh  gdb_help.txt  hello_world.c  hello_world.ptree  hello_world.ref  memory_manager_test.txt  simple_test.c  simple_test.ptree  simple_test.ref  test.c  test.ptree  test_1.c  test_1.ptree  test_1.ref  test_1.rsl
Project/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c
Project-build/: CMakeCache.txt  Makefile  Project  Project.cbp  cmake_install.cmake  compiler_debug.sh  native_refal.sh  output.txt  run_all_tests.sh  source.c  source.rsl  test.sh
Refal-5/: LinuxXMLLib.del  arithm.h  bf.txt  bif_lex.c  copyright.txt  dtrace.c  e.ref  freeze.c  ifunc.h  ldecl.h  load.c  macros.c  makefile.os2  parser.c  rcopt.c  rdhelp.txt  refc  refc.lnk  refgo.lnk  see2.c  vyvod.c  xxx1.c
Runtime/: .v_term.h.kate-swp  CMakeLists.txt  allocator.c  allocator.h  environment.c  environment.h  l_term.h  main.c  memory_manager.c  memory_manager.h  range.h  segment_tree.c  segment_tree.h  v_term.h  vec_header.h
Runtime-build/: CMakeCache.txt  Makefile  Runtime  Runtime.cbp  cmake_install.cmake
Runtime/headers/: builtins.h  fresult_t.h  func_call.h  func_call_t.h  func_result.h  l_term.h  lterm.h  memory_manager.h  segment_tree.h  v_machine.h  v_term.h  vmachine.h  vterm.h
Runtime/sources/: builtins.c  l_term.c  main.c  memory_manager.c  segment_tree.c  v_machine.c  v_term.c  vmachine.c  vterm.c
Runtime/test/: main.c
Test/: FAB.c  FAB.ptree  FAB.ref  build.sh  hello_world.c  (+7 more)
(+119 files in other folders)
